--- a/react-mui/public/index.html
+++ b/react-mui/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
@@ -18,7 +18,7 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>SujanRajs React-mui</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
